feat: added cosypose to environment.yaml

--- a/environment.yaml
+++ b/environment.yaml
@@ -21,8 +21,9 @@ dependencies:
   - pillow=6.0.0
   - ipython
   - pip:
-      - ./deps/bullet3
-      - ./deps/job-runner
+      - ./cosypose/deps/bullet3
+      - ./cosypose/deps/job-runner
+      - ./cosypose
       - imageio==2.6.1
       - simplejson==3.17.0
       - opencv-python==4.1.2.30
